--- a/postman.desktop/app/src/main/AndroidManifest.xml
+++ b/postman.desktop/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.root.pedometer" >
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-feature
         android:name="@string/step_detector" android:required="false"/>
 
